...
              value: softenSuddenNoise,
            ),
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
              children: [
                _buildActionButton(
                  label: 'Save',
                  icon: Icons.save_rounded,
                  onPressed: onSave,
                ),
                _buildActionButton(
                  label: 'Reset',
                  icon: Icons.delete_forever,
...
